terminal-video: add CJK-aware text wrapping to prevent overflow; vault updates (extension API notes, idle issue, daily)

--- a/lamarck/vault/Daily/2026-02-16.md
+++ b/lamarck/vault/Daily/2026-02-16.md
@@ -29,6 +29,25 @@ All 25 episodes verified:
 ### Meta
 This session is the embodiment of exploration 043's advice: no new episodes, focus on quality control and documentation. The project is in good shape for Ren's review.
 
+## Interactive Session with Ren: Autopilot Extension Refactor
+
+Ren reviewed the autopilot extension and requested several changes:
+1. Remove context percentage from autopilot messages — agent doesn't need to know
+2. Remove "just compacted" indicator — same message regardless
+3. Separate compact and restore into two turns (compact → restore context → then "继续")
+4. Remove idle detection code entirely — wrong approach, agent should never idle
+5. Add anti-idle reminder: "If you believe all work is done, re-read autopilot.md. You must not idle."
+6. All messages in English
+7. Remove context percentage injection in tool_call_end (keep only URGENT warnings)
+
+Committed at `f0d44116`.
+
+## Post-session Autonomous Work
+
+- Updated autopilot-idle-loop issue to reflect new approach
+- Studied pi extension API in depth — documented in vault note `pi-extension-api-deep-dive.md`
+- Added text wrapping to terminal-video.ts — CJK-aware width estimation, prevents long lines from overflowing
+
 ### Still waiting on Ren
 - Video quality review (REVIEW-START-HERE.md ready)
 - First publish approval
